[package]
name = "websocket-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4.9.0"
actix-ws = "0.3.0"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
env_logger = "0.11.5"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
